<resources>
    <string name="app_name">KgHome Calculator</string>
    <string name="_0">0</string>
    <string name="x">×</string>
    <string name="subsection">−</string>
    <string name="addition">+</string>
    <string name="power">^</string>
    <string name="division">÷</string>
    <string name="clear">c</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="modulo">%</string>
    <string name="cut">✁</string>
    <string name="_7">7</string>
    <string name="equal">=</string>
</resources>